--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.11.2",
+    "@react-three/fiber": "^8.0.19",
+    "d3": "^7.4.4",
     "next": "12.1.6",
+    "next-themes": "^0.2.0",
+    "octokit": "^1.7.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "three": "^0.140.2"
   },
   "devDependencies": {
+    "@types/d3": "^7.1.0",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
+    "critters": "^0.0.16",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "ts-node": "^10.7.0",
     "typescript": "4.6.4"
   }
 }
